@@ -1,5 +1,9 @@
 2010-09-20  Yves Blusseau  <blusseau@zetam.org>
 
+	* util/grub-setup.c: Use argp instead of getopt.
+
+2010-09-20  Yves Blusseau  <blusseau@zetam.org>
+
 	Use gnulib-tool to create gnulib source files.
 
 	* Add gnulib files generated by gnulib-tool in build-aux, m4 and
